# learning_bazel_project00

./: .bazelrc  .gitignore  BUILD.bazel  Info.plist  MODULE.bazel  README.md
Sources/: AppDelegate.h  AppDelegate.m  MainViewController.m  SceneDelegate.h  SceneDelegate.m
